--- a/css/index_css.css
+++ b/css/index_css.css
@@ -8,7 +8,7 @@
 body{
 	overflow: hidden;
 	background: rgba(255,170,170,1);
-	background: -webkit-linear-gradient(55deg, #75e8c4, #75d6e8);
+	background: -webkit-linear-gradient(55deg, #5ef2a7, #5fdcf2);
 }
 .container{
 	position:absolute;
@@ -19,7 +19,7 @@ body{
 }
 
 /*main box------------------------------------------*/
-.welcome{
+.main{
 	position:absolute;
 	top:-70vh;
 	left:25vw;
@@ -35,55 +35,63 @@ body{
 	line-height: 5vh;
 }
 
-/*profile--------------------------------------------*/
-#profile_pic{
-	position:relative;
-	width:20vh;
-	height:20vh;
-	margin-top:5vh;
-	border-radius:20vh;
-}
-
-/*content box--------------------------------------*/
+/*textbox--------------------------------------*/
 .textbox{
 	position:absolute;
 	width:88%;
-	height:30vh;
-	top: 26vh;
+	height:50vh;
+	top: 6vh;
 	left: 6%;
 	right: 6%;
 	overflow: scroll;
 	overflow-x: hidden;
 	opacity: 0;
+	text-align: left;
 
 	font-size:25px;
 	line-height: normal;
 	font-family: eng_font;
 }
-#p0{
-	opacity: 1;
-	z-index: 10;
-}
-#p3{
-	width: 100%;
-	left: 0;
-	right: 0;
-}
 .content{
-	font-size: 20px;
+	font-size: 17px;
+	line-height: 25px;
 	color: #555;
 	font-family: "微軟正黑體";
 }
 h1{
 	font-size: 32px;
+	line-height: 40px;
 	text-align: center;
 	color: #333;
+	font-family: eng_font;
+}
+h2{
+	font-size: 20px;
+	line-height: 30px;
+	text-align: center;
+	color: #CCC;
+	font-family: "微軟正黑體";
 }
 
-/*Page4 social media icon*/
+/*Page1 [HOME]---------------------------------*/
+#text0{
+	opacity: 1;
+	z-index: 10;
+	width: 100%;
+	left: 0;
+	right: 0;
+	text-align: center;
+}
+#profile_pic{
+	position: relative;
+	width:20vh;
+	height:20vh;
+	border-radius:20vh;
+}
+/*Page1 icon*/
 .icon_box{
 	width: 100%;
-	height: 70px;
+	height: 100px;
 	margin-top:5vh;
 }
 .fa{
@@ -146,6 +154,40 @@ h1{
 	color: #FFF;
 	background-color: #000;
 	box-shadow: 0 0 10px #000;
+}
+/*Page1 icon content*/
+.icon_content{
+	position: relative;
+	top: 0px;
+	left: -28px;
+	width: 80px;
+	height: 25px;
+	background-color: #198d91;
+	border-radius: 3px;
+	z-index: -5;
+	visibility: hidden;
+	opacity: 0;
+	transition: 0.5s cubic-bezier(1, -0.5, 0.5, 1);
+
+	color: #FFF;
+	font-size: 18px;
+	font-family: eng_font;
+	line-height: 25px;
+	text-align: center;
+}
+.icon_content:before{
+	content: "";
+	position: absolute;
+	border-left: 7px solid transparent;
+	border-right: 7px solid transparent;
+	border-bottom: 7px solid #198d91;
+	top: -6px;
+	left: 34px;
+}
+.fa:hover .icon_content{
+	top: 24px;
+	opacity: 1;
+	visibility: visible;
 }
 
 /*nav---------------------------------------------*/
