--- a/css/index_css.css
+++ b/css/index_css.css
@@ -205,15 +205,22 @@ h2{
 /*Page3 Works------------------------------------*/
 #text2{
 	text-align: center;
+	align-items: center;
 	width: 100%;
 	left: 0;
 }
-.slide{
+.slide_box{
 	position: relative;
-	width: 400%;
+	width: 100%;
 	height: 38vh;
 	margin-top: 20px;
 	box-shadow: 0 0 5px rgba(0,0,0,0.7);
+}
+.slide{
+	position: absolute;
+	width: 400%;
+	height: 100%;
+	top: 0;
 }
 .works{
 	position: relative;
@@ -231,7 +238,45 @@ h2{
 	text-shadow: 0 0 5px #000;
 	color: #FFF;
 }
-
+.btn{
+	position: absolute;
+	width: 80px;
+	height: 100%;
+	top: 0;
+	cursor: pointer;
+	font-family: eng_font;
+	font-size: 70px;
+	line-height: 38vh;
+	color: #FFF;
+	z-index: 5;
+	background-color: rgba(0,0,0,0.5);
+	opacity: 0;
+	transition: 0.5s;
+}
+.slide_box:hover .btn{
+	opacity: 0.4;
+	transition: 1s;
+}
+.smallbtn_box{
+	width: 100%;
+	height: 10px;
+	margin-top: 10px;
+}
+.smallbtn{
+	position: relative;
+	float: left;
+	width: 10px;
+	height: 10px;
+	border-radius: 10px;
+	background-color: #CCC;
+	cursor: pointer;
+	margin-right: 5px;
+	transition: 0.4s;
+}
+.smallbtn:hover{
+	background-color: #198d91;
+	transition: 0.5s;
+}
 
 /*nav---------------------------------------------*/
 .nav{
