--- a/css/index_css.css
+++ b/css/index_css.css
@@ -238,6 +238,10 @@ h2{
 	text-shadow: 0 0 5px #000;
 	color: #FFF;
 }
+.works a{
+	color: #FFF;
+	text-decoration: none;
+}
 .btn{
 	position: absolute;
 	width: 80px;
@@ -273,13 +277,9 @@ h2{
 	margin-right: 5px;
 	transition: 0.4s;
 }
-.smallbtn:hover{
-	background-color: #198d91;
-	transition: 0.5s;
-}
 
 /*nav---------------------------------------------*/
-.nav{
+/*.nav{
 	position:absolute;
 	width:100%;
 	height:50px;
@@ -309,6 +309,37 @@ h2{
 .nav li:hover{
 	color: #FFF;
 	transition: 0.8s;
+}*/
+.nav{
+	position:absolute;
+	width:100%;
+	height:50px;
+	bottom: 5vh;
+}
+.nav li{
+	position: relative;
+	float: left;
+	width:27%;
+	margin-right: 3%;
+	height:100%;
+	list-style: none;
+	border: 1px solid #198d91;
+	color: #198d91;
+	box-sizing: border-box;
+	cursor: pointer;
+	z-index: 1;
+
+	font-family: eng_font;
+	font-size: 25px;
+	line-height: 50px;
+	transition: 0.8s;
+}
+#nav_li_0{
+	margin-left: 6%;
+}
+.nav li:hover{
+	color: #FFF;
+	transition: 0.8s;
 }
 
 /*nav animate---------------------------------------*/
@@ -331,4 +362,27 @@ h2{
 .nav li:hover:after, .nav li:hover:before{
 	transition: all 500ms;
 	height: 50%;
+}
+
+/*works cover---------------------------------------*/
+.coverBg{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.7);
+	top: 0;
+	left: 0;
+	z-index: 10;
+	visibility: hidden;
+	opacity: 0;
+}
+.worksBox{
+	position: absolute;
+	width: 70vw;
+	height: 70vh;
+	top: 15vh;
+	left: 15vw;
+	background-color: #FFF;
+	border-radius: 2px;
+	box-shadow: 0 0 20px rgba(0,0,0,0.5);
 }
